public class Circle implements Shape {
    private String color; // intrinsic state
    private int x; // extrinsic state
    private int y;
    private int radius;

    public Circle(String color) {
        this.color = color;
    }

    public void setX(int x) {
        this.x = x;
    }

    public void setY(int y) {
        this.y = y;
    }

    public void setRadius(int radius) {
        this.radius = radius;
    }

    @Override
    public void draw() {
        System.out.println("Drawing Circle [Color=" + color +
                ", x=" + x + ", y=" + y + ", radius=" + radius + "]");
    }
}
